resources.GetRemote content from storyblok

--- a/remote/layouts/partials/build.html
+++ b/remote/layouts/partials/build.html
@@ -60,6 +60,29 @@
       {{ $output := $file.RelPermalink }}
     {{ end }}
   {{ end }}
+
+{{ end }}
+{{ with resources.GetRemote "https://api.storyblok.com/v2/cdn/stories?cv=1678732755&token=RJvQpsmRou5QBMSTYIebdwtt" }} 
+  {{ with .Content | unmarshal }}
+    {{ range .stories }}
+      {{ $post := dict 
+        "slug" .content.slug
+        "title" .content.title
+        "heroimg" .content.heroImg.url
+      }}
+      //"content" .content.content
+      {{ $filename := printf "posts/%s.md" (urlize .content.slug) }}
+      {{ $file := dict }}
+      {{ if eq $format "json" }}
+        {{ $string := print (jsonify $post) "\n " .content.content }}
+        {{ $file = $string | resources.FromString $filename }}
+      {{ else }}
+        {{ $yaml_template := resources.Get "post.yaml" }}
+        {{ $file = $yaml_template | resources.ExecuteAsTemplate $filename $post }}
+      {{ end }}
+      {{ $output := $file.RelPermalink }}
+    {{ end }}
+  {{ end }}
 {{ end }}
 
 
