--- a/remote/layouts/partials/build.html
+++ b/remote/layouts/partials/build.html
@@ -105,5 +105,32 @@
     {{ end }}
   {{ end }}
 {{ end }}
+{{ with resources.GetRemote "https://pbasfw.fly.dev/api/collections/posts/records?perPage=500" }} 
+  {{ with .Content | unmarshal }}
+    {{ range .items }}
+     {{ $heroImg := first 1 .photographs }}
+     {{ $collectionurl := printf "https://pbasfw.fly.dev/api/files/%s/%s/" .collectionId .id }}
 
+      {{ $post := dict 
+        "title" .title
+        "photos" .photographs
+        "heroimg" $heroImg
+        "collectionId" .collectionId
+        "id" .id
+        "herourl" $collectionurl
+      }}
+      //"content" .content
+      {{ $filename := printf "posts/%s.md" (urlize .slug) }}
+      {{ $file := dict }}
+      {{ if eq $format "json" }}
+        {{ $string := print (jsonify $post) "\n " .body}}
+        {{ $file = $string | resources.FromString $filename }}
+      {{ else }}
+        {{ $yaml_template := resources.Get "post.yaml" }}
+        {{ $file = $yaml_template | resources.ExecuteAsTemplate $filename $post }}
+      {{ end }}
+      {{ $output := $file.RelPermalink }}
+    {{ end }}
+  {{ end }}
+{{ end }}
 {{ return true }}
