add a back link to posts

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -17,6 +17,7 @@
         <div>
           {{ .Content }}
         </div>
+        <a href="../posts/">Back to All Posts</a>
       </div>
     </div>
   </div>
