--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -17,7 +17,7 @@
         <div>
           {{ .Content }}
         </div>
-        <a href="../posts/">Back to All Posts</a>
+        <a href="../">Back to All Posts</a>
       </div>
     </div>
   </div>
