Add color and underline to href link in post

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -17,7 +17,7 @@
         <div>
           {{ .Content }}
         </div>
-        <a href="../">Back to All Posts</a>
+        <a class="underline text-blue-600" href="../">Back to All Posts</a>
       </div>
     </div>
   </div>
