--- a/layouts/posts/li.html
+++ b/layouts/posts/li.html
@@ -1,13 +1,9 @@
-<a href="{{ .RelPermalink }}" class="block bg-indigo-100 hover:bg-indigo-200 transition border-4 border-indigo-600 p-4 text-center ">
-  <div class="w-20 mx-auto">
-   {{ if isset .Params "herourl"}}
-     {{ $herourl := .Params.herourl }}
-     {{ range .Params.heroimg }}
-       <img class="block w-full" src="{{ $herourl }}{{ . }}" />
-     {{ end }}
-   {{ else }}
-      <img class="block w-full" src="{{ .Params.heroimg }}" />
-   {{ end }} 
+<a href="{{ .RelPermalink }}" class="p-4 text-center border-2 shadow-lg">
+  <div class="w-40 mx-auto">
+    {{ $herourl := .Params.herourl }}
+    {{ range .Params.heroimg }}
+    <img class="block w-full" src="{{ $herourl }}{{ . }}" />
+    {{ end }}
   </div>
   <div class="mt-4">
     <div class="font-brand font-bold">{{ .Params.title }}</div> 
