--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="py-8 mb-8 border-t border-b border-indigo-700">
   <div class="relative max-w-7xl mx-auto px-4 lg:flex justify-between items-center">
-    <div class="text-4xl md:text-6xl font-bold" style="font-family: MuseoModerno"><span><img class="inline pl-2" src="https://res.cloudinary.com/dklongley/image/upload/w_100/v1617363882/dind.jpg" /></span><a href="{{ site.Home.RelPermalink }}">{{ site.Title }}</a></div>
+    <div class="text-4xl md:text-6xl font-bold" style="font-family: MuseoModerno"><span><img class="inline pr-2" src="https://res.cloudinary.com/dklongley/image/upload/w_100/v1617363882/dind.jpg" /></span><a href="{{ site.Home.RelPermalink }}">{{ site.Title }}</a></div>
     <div>
       {{ partialCached "stats" . }}
     </div>
