--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <div class="container mx-auto">
-    <div class="md:grid grid-cols-2 gap-8">
-      <div class="max-w-1/4 float-right p-8 md:max-w-none md:float-none md:p-0 md:order-1">
+    <div class="md:grid gap-8">
+      <div class="max-w-1 xfloat-right p-8 md:max-w-none md:float-none md:p-0 ">
       {{ if isset .Params "herourl"}}
         {{ $herourl := .Params.herourl }}
         {{ range .Params.heroimg }}
