--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -3,7 +3,7 @@
     {{ partialCached "stats" . }}
   </div>
   {{ $paginator := .Paginate (.Pages.ByParam "generation") 20 }}
-  <div class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-5 gap-8">
+  <div class="grid grid-cols-1 sm-grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-8">
     {{ range $paginator.Pages }}
       {{ .Render "li" }}
     {{ end }}
