--- a/remote/layouts/partials/build.html
+++ b/remote/layouts/partials/build.html
@@ -61,7 +61,7 @@
     {{ end }}
   {{ end }}
 {{ end }}
-{{ with resources.GetRemote "https://api.storyblok.com/v2/cdn/stories?cv=1678732755&token=RJvQpsmRou5QBMSTYIebdwtt" }} 
+{{ with resources.GetRemote "https://api.storyblok.com/v2/cdn/stories/?cv=1678981671&token=RJvQpsmRou5QBMSTYIebdwtt&version=published" }} 
   {{ with .Content | unmarshal }}
     {{ range .stories }}
       {{ $post := dict 
