--- a/remote/layouts/partials/build.html
+++ b/remote/layouts/partials/build.html
@@ -1,4 +1,5 @@
 
+{{ $format := "json" }}
 {{ with resources.GetRemote "https://script.google.com/macros/s/AKfycbwncwx9CHMqh4R2wBQ5dsSBhFcR4hqGbgJv27Q9Hu9UKNk7LYeTjju28lQlTTDSABFVaw/exec" }} 
   {{ with .Content | unmarshal }}
   {{ $categories := slice }}
