Add square bookings

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,6 +19,13 @@
         {{ end }}
       </div>
      </div>
+     <div>
+      <h2>Make an appointment</h2>
+      <!-- Start Square Appointments Embed Code -->
+      <script src='https://square.site/appointments/buyer/widget/u7lc1fog3lsdfx/LA4YYY2N5SM9X.js'>
+      </script>
+      <!-- End Square Appointments Embed Code -->
+    </div>
   </div>
 
 {{ end }}
