tweek appointments embed

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,10 +21,11 @@
      </div>
      <div>
       <h2>Make an appointment</h2>
-      <!-- Start Square Appointments Embed Code -->
-      <script src='https://square.site/appointments/buyer/widget/u7lc1fog3lsdfx/LA4YYY2N5SM9X.js'>
+      
+      <iframe src="https://squareup.com/appointments/buyer/widget/u7lc1fog3lsdfx/LA4YYY2N5SM9X" style="min-height: 100%; width: 100%; height: 100%; border: none;"></iframe>
+      <script src="https://square.site/appointments/buyer/widget/u7lc1fog3lsdfx/LA4YYY2N5SM9X.js">
       </script>
-      <!-- End Square Appointments Embed Code -->
+      
     </div>
   </div>
 
