add appointment button to go to flow

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,11 +20,8 @@
       </div>
      </div>
      <div>
-      <h2>Make an appointment</h2>
       
-      <iframe src="https://squareup.com/appointments/buyer/widget/u7lc1fog3lsdfx/LA4YYY2N5SM9X" style="min-height: 100%; width: 100%; height: 100%; border: none;"></iframe>
-      <script src="https://square.site/appointments/buyer/widget/u7lc1fog3lsdfx/LA4YYY2N5SM9X.js">
-      </script>
+      <button><a href="https://squareup.com/appointments/book/u7lc1fog3lsdfx/LA4YYY2N5SM9X/start">Make an Appointment</a></button>
       
     </div>
   </div>
