Specific appointment widget

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,9 @@
      </div>
      <div>
       
-      <button><a href="https://squareup.com/appointments/book/u7lc1fog3lsdfx/LA4YYY2N5SM9X/start">Make an Appointment</a></button>
+      <!--<button><a href="https://squareup.com/appointments/book/u7lc1fog3lsdfx/LA4YYY2N5SM9X/start">Make an Appointment</a></button>-->
+
+      <!-- Start Square Appointments Embed code --><a style=" background-color: #006aff; color: white; height: 40px; text-transform: uppercase; font-family: 'Square Market', 'helvetica neue', helvetica, arial, sans-serif; letter-spacing: 1px; line-height: 38px; padding: 0 28px; border-radius: 3px; font-weight: 500; font-size: 14px; cursor: pointer; display: inline-block; " href="https://squareup.com/appointments/buyer/widget/31a5rla1nx6lac/LA4YYY2N5SM9X">Book an Appointment</a><!-- End Square Appointments Embed code -->
       
     </div>
   </div>
