set storyblok param

--- a/remote/layouts/partials/build.html
+++ b/remote/layouts/partials/build.html
@@ -68,6 +68,7 @@
         "slug" .content.slug
         "title" .content.title
         "heroimg" .content.heroImg.url
+        "storyblok" "true"
       }}
       //"content" .content.content
       {{ $filename := printf "posts/%s.md" (urlize .content.slug) }}
