--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,6 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;600;700;900&display=swap" rel="stylesheet">
   </head>
   <body class="bg-black-200 text-white-600">
+    {{ if (isset .Params "storyblok") }}
+      <script src="//app.storyblok.com/f/storyblok-v2-latest.js" type="text/javascript"></script>
+    {{ end }}
     {{ partial "header.html" . }}
     <main class="mx-auto max-w-7xl py-8 px-4">
       {{ block "main" . }}
