DO nothing on publish and save(change)

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,10 +13,10 @@
 //const { StoryblokBridge, location } = window
 const storyblokInstance = new StoryblokBridge()
  
-storyblokInstance.on(['published', 'change'], (event) => {
-   // do not reload page if save or publish is clicked
-   location.reload(false)
-})
+//storyblokInstance.on(['published', 'change'], (event) => {
+//   // do not reload page if save or publish is clicked
+//   location.reload(false)
+//})
 
 storyblokInstance.on('input', (event) => {
    converter = new showdown.Converter(),
