--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,7 +16,13 @@
   </head>
   <body class="bg-black-200 text-white-600">
     {{ if (isset .Params "storyblok") }}
-      <script src="//app.storyblok.com/f/storyblok-v2-latest.js" type="text/javascript"></script>
+    <script>
+      if ( window !== window.parent ){
+        var storyblokscript = document.createElement('script');
+        my_awesome_script.setAttribute('src','//app.storyblok.com/f/storyblok-v2-latest.js');
+        document.body.appendChild(storyblokscript);
+      }      
+    </script>
     {{ end }}
     {{ partial "header.html" . }}
     <main class="mx-auto max-w-7xl py-8 px-4">
