set attribute src storyblokscript

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,7 +19,7 @@
     <script>
       if ( window !== window.parent ){
         var storyblokscript = document.createElement('script');
-        my_awesome_script.setAttribute('src','//app.storyblok.com/f/storyblok-v2-latest.js');
+        storyblokscript.setAttribute('src','//app.storyblok.com/f/storyblok-v2-latest.js');
         document.body.appendChild(storyblokscript);
       }      
     </script>
