--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,6 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
 <script>
 //const { StoryblokBridge, location } = window
+if ( window !== window.parent ){
 const storyblokInstance = new StoryblokBridge()
  
 //storyblokInstance.on(['published', 'change'], (event) => {
@@ -26,4 +27,5 @@ storyblokInstance.on('input', (event) => {
    document.getElementById("sbtitle").innerHTML = event.story.content.title
    console.log(html)
 })
+}
 </script>
