--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,13 +16,7 @@
   </head>
   <body class="bg-black-200 text-white-600">
     {{ if (isset .Params "storyblok") }}
-    <script>
-      if ( window.location !== window.parent.location ) {
-        var storyblokscript = document.createElement('script');
-        storyblokscript.setAttribute('src','//app.storyblok.com/f/storyblok-v2-latest.js');
-        document.body.appendChild(storyblokscript);
-      }      
-    </script>
+    <script src="//app.storyblok.com/f/storyblok-v2-latest.js"></script>
     {{ end }}
     {{ partial "header.html" . }}
     <main class="mx-auto max-w-7xl py-8 px-4">
