--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,10 +14,10 @@
 
 const storyblokInstance = new StoryblokBridge()
  
-//storyblokInstance.on(['published', 'change'], (event) => {
-//   // do not reload page if save or publish is clicked
-//   location.reload(false)
-//})
+storyblokInstance.on(['published', 'change'], (event) => {
+   // do not reload page if save or publish is clicked
+   location.reload(false)
+})
 
 storyblokInstance.on('input', (event) => {
    converter = new showdown.Converter(),
