do not do a location reload

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,7 +16,7 @@ const storyblokInstance = new StoryblokBridge()
  
 storyblokInstance.on(['published', 'change'], (event) => {
    // do not reload page if save or publish is clicked
-   location.reload(false)
+   //location.reload()
 })
 
 storyblokInstance.on('input', (event) => {
