--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,7 +13,13 @@
 //const { StoryblokBridge, location } = window
 
 const storyblokInstance = new StoryblokBridge()
+
  
+storyblokInstance.on(['published', 'change'], () => {
+    // reload page if save or publish is clicked
+    location.reload(false)
+})
+
 storyblokInstance.on('input', (event) => {
    converter = new showdown.Converter(),
    html = converter.makeHtml(event.story.content.content);
