--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
 <script>
 //const { StoryblokBridge, location } = window
-
+const { StoryblokBridge, location } = window
 const storyblokInstance = new StoryblokBridge()
 
  
